Fixed slider shadow not showing on firefox.

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -26,6 +26,7 @@
     height: 2.5rem;
     width: 2.5rem;
     background: url('/images/icon-slider.svg') a.$clr-primary-color-strong-cyan no-repeat center;
+    box-shadow: 0 20px 30px -5px a.$clr-primary-color-soft-cyan;
     border-radius: 50%;
     border: none;
     transition: 0.2s ease-in-out;
